k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
spec:
  selector:
    app: wisecow
  type: NodePort
  ports:
    - protocol: TCP
      port: 4499
      targetPort: 4499
